Dark mode fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,8 @@
-/**
- * WEBSITE: https://themefisher.com
- * TWITTER: https://twitter.com/themefisher
- * FACEBOOK: https://www.facebook.com/themefisher
- * GITHUB: https://github.com/themefisher/
- */
-
 /*=== MEDIA QUERY ===*/
 @import url("https://fonts.googleapis.com/css?family=Rubik:400,500,600,700|Montserrat:900,700");
 html {
   overflow-x: hidden;
+  scroll-behavior: smooth;;
 }
 
 body {
@@ -16,7 +10,7 @@ body {
   font-family: "Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
-  color: #6F8BA4;
+  color: #ffffff;
   font-weight: 400;
 }
 
@@ -406,7 +400,7 @@ a:focus {
 #navbar .nav-link {
   padding-left: 26px;
   font-weight: 500;
-  color: #111;
+  color: #ffffff;
   font-family: "Rubik", sans-serif;
   text-transform: capitalize;
   font-size: 18px;
@@ -422,12 +416,13 @@ a:focus {
 }
 @media (max-width: 860px){
   #navbar.nav-text-white .navbar-brand {
-    color: #000000;
+    color: #ffffff;
   }
 }
 
 .navbar-brand {
   font-weight: 600;
+  color: #ffffff;
 }
 
 .dropdown-menu {
@@ -569,7 +564,7 @@ ul.dropdown-menu li {
     display: none;
   }
   .navbar-toggler {
-    color: #111;
+    color: #ffffff;
   }
   .dropdown-menu {
     display: none;
@@ -680,6 +675,9 @@ ul.dropdown-menu li {
 .process {
   position: relative;
 }
+.process-head{
+  color: beige;
+}
 .process:before {
   position: absolute;
   content: "";
@@ -687,7 +685,7 @@ ul.dropdown-menu li {
   top: 0px;
   width: 100%;
   height: 100%;
-  background: url("../images/bg/bg-half.png") no-repeat;
+  /* background: url("../images/bg/bg-half.png") no-repeat; */
   background-position: top right;
 }
 
@@ -695,25 +693,27 @@ ul.dropdown-menu li {
   padding: 50px 40px;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0px 0px 40px 0px rgba(85, 128, 255, 0.2);
+  box-shadow: 0px 0px 40px 0px rgba(12, 12, 12, 0.2);
 }
 .icon-block i {
   font-size: 35px;
-  background: rgba(239, 50, 58, 0.08);
+  background: rgba(211, 167, 169, 0.08);
   width: 70px;
   height: 70px;
   text-align: center;
   padding-top: 16px;
   border-radius: 10px;
   display: inline-block;
-  color: rgb(176, 150, 102);
+  color: #6c757d;
 }
 .icon-block h5 {
   margin-top: 25px;
   margin-bottom: 15px;
+  color: beige;
 }
 .icon-block p {
   margin-bottom: 0px;
+  color: #6c757d;
 }
 
 .feature-list ul li {
@@ -789,7 +789,7 @@ ul.dropdown-menu li {
   background: rgb(176, 150, 102);
 }
 .counter .counter-item h2 {
-  color: #fff;
+  color: beige;
 }
 .counter .counter-item p {
   color: rgba(255, 255, 255, 0.7);
@@ -1061,6 +1061,10 @@ ul.dropdown-menu li {
 .portfolio {
   position: relative;
 }
+.portfolio-head h2{
+  color: beige;
+}
+
 .portfolio:before {
   position: absolute;
   content: "";
@@ -1068,7 +1072,6 @@ ul.dropdown-menu li {
   top: 0px;
   width: 100%;
   height: 500px;
-  background-color: beige;
 }
 
 .portflio-item:before {
@@ -1079,7 +1082,8 @@ ul.dropdown-menu li {
   width: 0%;
   position: absolute;
   transition: all 0.25s cubic-bezier(0.86, 0, 0.07, 1);
-  background: rgba(176, 150, 102, 0.98);
+  /* background: rgba(176, 150, 102, 0.98); */
+  background: rgba(17, 17, 17, 0.77);
   opacity: 0;
   overflow: hidden;
 }
@@ -1707,8 +1711,24 @@ ul.dropdown-menu li {
 }
 
 .my-nav.scrolled {
-  background-color: #ffffff !important;
-  color: #000;
+  background-color: rgb(17, 17, 17) !important;
+  color: #ffffff !important;
 }
 
 
+/* Custom background colours */
+.mybg-black{
+  background-color: rgb(17, 17, 17);
+
+}
+
+.mybg-grey{
+  background-color: #202020;
+}
+
+.mytext-beige{
+  color: beige;
+}
+.mytext-grey{
+  color: #6c757d;
+}
